2005-03-01 Ian Rutt
 * Removed redundant paramfiles.tex from doc/ug
 * Removed a couple of redundent components from glint
 * Hopefully fixed up hotstarts for glint (only a sinlge array needs to be written)
	
2005-02-29 Ian Rutt
 * Updated docs to match new GLINT API
 * Added additional underscore control code substitution to parts of LaTeX
   autogeneration in generate_ncvars.py

2005-02-28 Magnus Hagdorn
 * updated documentation
 * glimmer_config.f90: fixed a bug, grr too many programming languages swimming in my head
 * beautified INSTALL

2005-02-29 Ian Rutt
 * Changed documentation to match renamed I/O sections
 * Added relevant output sections to gint_vars.def
 * Moved glint output to end of timestep, and consolidated glide timstep calls
 * Moved output orography grid definition to initalise_glint call as
   optional arguments, and removed glint_set_orog_res subroutine

2005-02-28 Magnus Hagdorn
 * g_land.config: renamed I/O section

2005-02-26 Magnus Hagdorn
 * bumped version to 0.3
 * physics.tex: removed mb section since Ian resurrected it elsewhere
 * driver.tex: some updates for eis climate
 * glint.tex: fixed reference
 * intro.tex: removed misleading section on GLIMMER
 * glimmer_config.f90: added subroutine checking if all section are used
   and hooked it up (eis_glide.f90, simple_glide.f90, glint.f90)
 * glimmer_ncparams.f90: prefixed section names with CF
 * glimmer_version.f90.in: version string is generated by configure
 * glimmer_global.f90: load new version module
 * configure.in handles versioning and also generates new script glimmer-config
 * updated NEWS
	
2005-02-25 Ian Rutt
 * Finished updating GLINT documentation
 * Added mass-balance scheme docs for PDD (resurrected from old docs)
 * Moved glint_example files to subdirectory in data (probably temporary)
	
2005-02-24 Ian Rutt
 * Updated GLINT documetation, resurrected some old stuff about using
   GLINT, and added a diagram about timestepping. This is perhaps a bit big
   atm...