@@ -1,0 +1,1 @@
+\newcommand{\glimmerver}{@GLIMMER_MAJOR_VERSION@.@GLIMMER_MINOR_VERSION@}
