@@ -1,10 +1,10 @@
 \newcommand{\dir}{dg}
 
 \pagestyle{myheadings}
-\markright{GLIMMER code design overview}
+\markright{GLIMMER {\glimmerver} --- Developer's Guide}
 
 \begin{document}
-\title{GLIMMER --- Developer's Guide}
+\title{GLIMMER {\glimmerver} --- Developer's Guide}
 \author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk} \and Ian Rutt\thanks{I.C.Rutt@bristol.ac.uk}}
 \maketitle
 \tableofcontents
