@@ -2,10 +2,10 @@
 
 \pagestyle{myheadings}
 
-\markright{GLIMMER 1.0 user documentation}
+\markright{GLIMMER {\glimmerver} user documentation}
 
 \begin{document}
-\title{GLIMMER 1.0 User Documentation}
+\title{GLIMMER {\glimmerver} User Documentation}
 \author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk}, Ian
 Rutt\thanks{I.C.Rutt@bristol.ac.uk} \and Tony Payne\thanks{a.j.payne@bristol.ac.uk}}
 
